--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,112 @@
-boto3==1.13.5
-botocore==1.16.5
-certifi==2020.4.5.1
+alabaster==0.7.12
+allennlp==0.9.0
+attrs==19.3.0
+Babel==2.7.0
+blis==0.2.4
+boto==2.49.0
+boto3==1.9.200
+botocore==1.12.200
+certifi==2019.6.16
+cffi==1.12.3
 chardet==3.0.4
-click==7.1.2
-decorator==4.4.2
-docutils==0.15.2
-future==0.18.2
-idna==2.9
-jmespath==0.9.5
-joblib==0.14.1
-networkx==2.4
-nltk==3.5
-numpy==1.18.4
-python-dateutil==2.8.1
+Click==7.0
+conllu==1.3.1
+cycler==0.10.0
+cymem==2.0.3
+decorator==4.4.0
+docutils==0.14
+editdistance==0.5.3
+fairseq==0.7.2
+flaky==3.6.1
+Flask==1.1.1
+Flask-Cors==3.0.8
+ftfy==5.6
+gensim==3.8.1
+get==2019.4.13
+gevent==1.4.0
+greenlet==0.4.15
+h5py==2.10.0
+idna==2.8
+imagesize==1.1.0
+importlib-metadata==1.2.0
+itsdangerous==1.1.0
+Jinja2==2.10.3
+jmespath==0.9.4
+joblib==0.13.2
+jsonnet==0.14.0
+jsonpickle==1.2
+kiwisolver==1.1.0
+MarkupSafe==1.1.1
+matplotlib==3.1.1
+more-itertools==8.0.2
+moverscore==0.85
+murmurhash==1.0.2
+networkx==2.3
+nltk==3.4.4
+numpy==1.17.0
+numpydoc==0.9.1
+overrides==2.5
+packaging==19.2
+parsimonious==0.8.1
+plac==0.9.6
+pluggy==0.13.1
+portalocker==1.5.1
+post==2019.4.13
+preshed==2.0.1
+protobuf==3.11.1
+public==2019.4.13
+py==1.8.0
+pycparser==2.19
+pyemd==0.5.1
+Pygments==2.5.2
+pyparsing==2.4.2
+pytest==5.3.1
+python-dateutil==2.8.0
+pytorch-pretrained-bert==0.6.2
 pytorch-transformers==1.2.0
-regex==2020.5.7
-requests==2.23.0
-s3transfer==0.3.3
-sacremoses==0.0.43
-scikit-learn==0.22.2.post1
-scipy==1.4.1
-sentencepiece==0.1.86
-six==1.14.0
+pytz==2019.3
+pyzmq==18.1.0
+query-string==2019.4.13
+regex==2019.6.8
+request==2019.4.13
+requests==2.22.0
+responses==0.10.7
+s3transfer==0.2.1
+sacrebleu==1.3.7
+sacremoses==0.0.24
+scikit-learn==0.21.3
+scipy==1.3.0
+sentence-transformers==0.2.3
+sentencepiece==0.1.82
+six==1.12.0
 sklearn==0.0
-torch==1.5.0
-tqdm==4.46.0
-urllib3==1.25.9
+smart-open==1.9.0
+snowballstemmer==2.0.0
+spacy==2.1.9
+Sphinx==2.2.2
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+sqlparse==0.3.0
+srsly==0.2.0
+subword-nmt==0.3.6
+summ-eval-client==1.0.0
+summ-eval-server==1.0.0
+tensorboardX==1.9
+termcolor==1.1.0
+thinc==7.0.8
+torch==1.3.1
+tqdm==4.32.2
+transformers==2.2.1
+typing==3.7.4
+Unidecode==1.1.1
+urllib3==1.25.3
+wasabi==0.4.2
+wcwidth==0.1.7
+Werkzeug==0.16.0
+word2number==1.1
+xmltodict==0.12.0
+zipp==0.6.0
